2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* S_scheme.cpp: use unstable_exp_threshold.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* cavity.cpp: Improve checking for gain_material (again).

2003-07-14 Peter Bienstman <Peter.Bienstman@ugent.be>

	* cavity.cpp: Improve checking for gain_material.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.h: Improve memory management.
	* stack.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.cpp: Improve memory management.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add pick_sign_k.
	* defs.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* scatterer.h: Add SquashedScatterer.
	* scatterer.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* S_scheme.cpp: Regularise in case of resonance.

2003-06-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add get_polarisation.

2003-06-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* geometry.py: Fix add_flipped.

2003-05-23  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Warn if incident field not set.

2003-04-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add various width() functions.

2003-04-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add Cavity::bot_stack and top_stack.
	* cavity.h: Ditto.

2003-03-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add Section:set_estimate() and Section.set_sorting().

2003-03-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: Reorder arguments.
	* cavity.cpp: Ditto.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Added Material::set_n and set_mur.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Added BlochMode::fw_bw.
	* bloch.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
